# amygda_ops_risk_score_sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
amygda_ops_risk_score/: __init__.py  _http.py  _setup_nlp.py  _validators.py  client.py  config.py  exceptions.py  helpers.py  session.py
examples/notebooks/: 01_labelling.ipynb  02_risk_score.ipynb  03_rescore.ipynb
examples/sample_data/: labelling_sample.csv  risk_score_prediction.csv  risk_score_training.csv
how_to/: how_to.md
how_to/examples/: 01a_labelling_fixed_log.ipynb  01b_labelling_free_text.ipynb  02a_risk_score_fixed_log_supervised.ipynb  02b_risk_score_fixed_log_unsupervised.ipynb  02c_risk_score_free_text_unsupervised.ipynb  02d_risk_score_free_text_supervised.ipynb
how_to/examples/sample_data/: fixed_log_failures.csv  fixed_log_generation.csv  fixed_log_training.csv  free_text_failures.csv  free_text_generation.csv  free_text_training.csv
how_to/guides/: 01_labelling_guide.ipynb  02_risk_score_guide.ipynb
