[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amygda-ops-risk-score"
version = "2.1.0"
description = "Python SDK for the Amygda Operational Risk Score API"
requires-python = ">=3.10"
dependencies = [
    "httpx~=0.27",
    "pandas~=2.0",
    "openpyxl~=3.1",
    "matplotlib~=3.10",
    "plotly~=6.0",
    "seaborn~=0.13",
    "pyarrow>=14.0,<30.0",
    "nbformat>=4.2.0",
    "wordcloud>=1.9,<2.0",
]

[project.optional-dependencies]
# Only needed for VS Code kernel registration — Jupyter users already have these
ide = [
    "jupyter>=1.0.0,<2.0",
    "ipykernel>=6.0,<7.0",
]

[project.scripts]
ops-risk-setup = "amygda_ops_risk_score._setup_nlp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["amygda_ops_risk_score*"]
